--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,11 @@
   </head>
 
   <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-    <%= yield %>
-  </body>
+
+   <%= render 'layouts/navigations' %>
+      <div class="container">
+          <%= render 'layouts/messages' %>
+          <%= yield %>
+      </div>
+   </body>
 </html>
