--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,9 @@
 <h1>Welcome to the finance tracker App</h1>
+<div class="container">
+
+<%= link_to 'My Portfolio', my_portfolio_path %>
+</div>
+</br>
 
 
 <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
