--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,3 +14,14 @@
 .results-block{
 	display: inline-block;
 }
+
+
+.logout-button{
+	margin-right: 5px;
+}
+
+
+.user-name{
+	margin-top: 3.5%;
+	padding-right: 5px;
+}
