--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -2,12 +2,25 @@
    <%= render 'layouts/messages' %>
 </div>
 
-
-
 <% if @stock %>
-      <div class="card card-header results-block">
+     <div class="card card-header results-block">
     	<strong>Symbol:</strong>     <%= @stock.ticker %>
     	<strong>Name:</strong>       <%= @stock.name %>
     	<strong>Last price:</strong> <%= @stock.last_price %>
-      </div>
-    <% end %>
+            <% if current_user.can_track_stock?(@stock.ticker) %>
+              <%= link_to 'ADD to Portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker), class: "btn btn-success", method: :post %>
+            <% else %>
+              <span class="badge badge-secondary">
+                     you are already tracking
+                     <% if !current_user.under_stock_limit? %>
+                       10 stocks 
+                     <% end %>
+
+                     <% if current_user.stock_already_tracked?(@stock.ticker) %>
+                       this stock
+                     <% end %>
+
+              </span>
+            <% end %>
+     </div>
+<% end %>
