--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -11,7 +11,7 @@
           </div>
           <div class="col-sm-3">
           	<%= button_tag type: :submit, class: "btn btn-success" do %>
-          	 <%= 'search' %>
+          	<%= 'search' %>
           	<% end %>
 
           </div>
@@ -20,5 +20,11 @@
 
 </div>    
 <div id="results">
+
 	
 </div>
+
+
+<% if !@tracked_stocks.empty? %>
+<%= render 'stocks/lists' %>
+<% end %>
